--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-# Python
+venv/
 __pycache__/
 *.pyc
 *.pyo
-*.pyd
-
-# Django
 db.sqlite3
-/media/
-.env
-
-# VSCode
-.vscode/
-
-# Node
-node_modules/
-dist/
-
-venv
