--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,28 @@
-Django>=4.2
-djangorestframework>=3.14
-requests>=2.31
-python-dotenv>=1.0
+asgiref==3.11.0
+certifi==2025.7.14
+charset-normalizer==3.4.4
+Django==4.2.11
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+filelock==3.20.1
+fsspec==2025.12.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+PyJWT==2.10.1
+python-dotenv==1.2.1
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.15.3
+sqlparse==0.5.4
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.9.1
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
